alterando arquivo resumo sobre SEO

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ description: "Um pouco sobre o trabalho e a equipe"
         <div  class="my-auto">
           
           <div id="left">
-            <h3>Sistema de Informação</h3>
+            <h3>Sistemas de Informação</h3>
               
             <div class="subheading-hf"> Disciplina: Programação WEB </div>
 
