--- a/demo/tools-chart.html
+++ b/demo/tools-chart.html
@@ -18,6 +18,46 @@ description: "Ferramentas"
 	}
 
 
+
+/* INICIO HERALD ALTERAÇÕES  */
+
+	.resume-name-hf, .resume-subheading{
+		text-align: center
+	}
+
+	.mb-0-hf{
+		margin-bottom: 0 !important;
+	}
+
+	.text-primary-hf{
+		color: #1aa3ff !important; 
+
+	}
+
+	.subheading-hf {
+	  text-transform: uppercase;
+	  font-weight: 500;
+	  font-family: 'Saira Extra Condensed', serif;
+	  font-size: 1.35rem;
+	  line-height: 40%;
+	}
+
+	.mb-5-hf{
+		margin-bottom: 3rem !important;
+	}
+
+	h6 {
+		font-size: 3em;
+		font-family: 'Saira Extra Condensed', serif;
+	  	font-weight: 700;
+	  	text-transform: uppercase;
+	  	color: #343a40; 
+	}
+
+/* FIM HERALD ALTERAÇÕES  */
+
+
+
 	h1 {
 	  font-weight: 200;
 	  font-size: 3em;
@@ -42,11 +82,13 @@ description: "Ferramentas"
 
 
     <div class="wrapper">
-       	<h1>Grupo SEO - Facid SI</h1>
+    	<h6 class="resume-name-hf mb-0-hf">Grupo
+            <span class="text-primary-hf">SEO</span>
+        </h6>
 
 		<canvas id="myskylls-polar"  style="position: relative; height:800vh; width:800vw;"></canvas>
 
-		<a href="{{site.url}}#skills" class="btn btn-primary" title="Voltar">Voltar</a>
+		<a href="{{site.url}}#home" class="btn btn-primary subheading-hf" title="Voltar">Voltar</a>
 
     </div>
 
@@ -69,10 +111,10 @@ description: "Ferramentas"
 				"data": [
 					8,
 					6,
-					4,
+					8,
 					9,
-					5,
-					6
+					7,
+					5
 				],
 				"backgroundColor": [
 					"rgb(255, 99, 132)",
