editando posts e index

--- a/index.html
+++ b/index.html
@@ -61,27 +61,36 @@ description: "Um pouco sobre o trabalho e a equipe"
         <div class="my-auto">
           <h2 class="mb-5">O Trabalho</h2>
 
-            <p>*A realização deste trabalho terá valor de 5 (cinco) pontos como nota parcial da avaliação AP1 do semestre 2018.1.”</p>
+            <p id="subheading-hf-p">Este trabalho tem valor de <b>5 (cinco) pontos</b> como nota parcial da avaliação AP1 do semestre 2018.1.</p></br>
 
-            <p>*“Formar um grupo de 10 integrantes para a realização do trabalho.”</p>
 
-            <p>*Parte 1 – Resumo
-            “Construa um resumo a mão de no mínimo 3 folhas sobre o tema escolhido pelo grupo. Onde a capa para o resumo deve ser formatada com o nome de todos os integrantes e impressa.</p>
+            <p id="subheading-hf-p">Formar um grupo de 10 integrantes para a realização do trabalho.</p></br>
 
-            <p>Obs.: O integrante, cujo o nome não estiver descrito na lista de integrantes na capa do trabalho, o mesmo ficará com nota 0 (zero) para este trabalho avaliativo.”</p>
 
-            <p>*Parte 2 – Pratica do Assunto Escolhido
-            “Realizar uma atividade prática referente ao assunto escolhido pelo grupo.”</p>
+            <p id="subheading-hf-p">Resumo</p>
 
-            <p>*Apresentação do Trabalho 1.0 - 04/04/2018
-            “Apresentar o startup do trabalho, podendo ser sobre a prática do assunto escolhido pelo grupo quanto o início do resumo ou ambos.</p>
+            <p>O resumo deve ser <b>feito à mão</b> com no <b>mínimo 3 folhas</b> sobre o tema escolhido pelo grupo. Onde a capa para o resumo deve ser formatada com o nome de todos os integrantes e impressa.</p>
 
-            <p>Obs.: O grupo que não apresentar algum startup do trabalho terá 1 (um) ponto subtraído do total máximo do trabalho”</p>
+            <p><b><b>Obs.:</b></b> O integrante, cujo o nome não estiver descrito na lista de integrantes na capa do trabalho, o mesmo ficará com nota 0 (zero) para este trabalho avaliativo.</p></br>
 
-            <p>*Apresentação do Trabalho 2.0 – 11/04/2018
-            “Apresentar o trabalho em sala de aula em caráter de seminário com no máximo 3 integrantes do grupo.</p>
 
-            <p>Obs.: O integrante que faltar no dia da apresentação 2.0 terá subtraído a sua nota individual 1 (um) ponto e inclusive apresentar o trabalho sozinho no próximo dia/aula da disciplina.”</p>
+            <p id="subheading-hf-p">Atividade pratica do Assunto Escolhido</p>
+
+            <p>Realizar uma atividade prática referente ao assunto escolhido pelo grupo.</p></br>
+
+
+            <p id="subheading-hf-p">Apresentação do Trabalho Parcial - 04/04/2018</p>
+
+            <p>Apresentar o startup do trabalho, podendo ser sobre a prática do assunto escolhido pelo grupo quanto o início do resumo ou ambos.</p>
+
+            <p><b>Obs.:</b> O grupo que não apresentar alguma startup do trabalho terá 1 (um) ponto subtraído do total máximo do trabalho</p></br>
+
+
+            <p id="subheading-hf-p">Apresentação do Trabalho Completo – 11/04/2018</p>
+
+            <p>Apresentar o trabalho em sala de aula em caráter de seminário com no máximo 3 integrantes do grupo.</p>
+
+            <p><b>Obs.:</b> O integrante que faltar no dia da apresentação do trabalho completo terá subtraído a sua nota individual 1 (um) ponto e inclusive apresentar o trabalho sozinho no próximo dia/aula da disciplina.</p>
 
         </div>
       </section>
